Fixing day wrapping.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -28,15 +28,16 @@ form[name="time"] > #submit{
 #timeline > .warning {
     width: 100%;
     height: 100%;
-    text-align: center;
+    display: grid;
     position: relative;
     top: 40vh;
 }
 
 #timeline > .warning > span{
-    height: 2rem;
+    height: 100%;
     width: 70%;
     font-size: 1rem;
+    justify-self: center;
 }
 
 .timeline-item-time, .timeline-item-date {
